<resources>
    <string name="app_name">Smart home, but not u</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="string_enter_your_house">Enter Your House</string>
    <string name="string_new_resident">New Resident</string>
    <string name="string_i_am_resident">I Am Resident</string>
    <string name="string_smart_house">Smart House</string>
    <string name="error_invalid_login_or_password">Неверный логин или пароль</string>
    <string name="error_empty_fields">Все поля должны быть заполнены</string>
    <string name="text_your_home">Your Home</string>
    <string name="string_address">2715 Orenburg, Gagarina 11</string>
    <string name="text_tab_rooms">rooms</string>
    <string name="text_home">Home</string>
    <string name="text_statics">Statics</string>
    <string name="text_routines">Routines</string>
    <string name="text_setting">Setting</string>
    <string name="text_statistic_is_under_development">Statistic screen is under development</string>
    <string name="text_routines_is_under_development">Routines screen is under development</string>
    <string name="text_profile">Profile</string>
    <string name="text_save">SAVE</string>
    <string name="text_username"> Username</string>
    <string name="example_name">Kolomytsev Vladislav</string>
    <string name="text_email"> Email</string>
    <string name="example_email">kolomyytsevvladislav90@gmail.com</string>
    <string name="example_phone">8(987)–343–55–09</string>
    <string name="text_phone"> Phone</string>
    <string name="text_gender"> Gender</string>
    <string name="example_gender">Male</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_date_of_birth"> Date Of Birth</string>
    <string name="example_date">3/10/2003</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_add_room">Add Room</string>
    <string name="text_enter_room_s_name"> Enter Room\'s name</string>
    <string name="tint_name_of_room">Name Of Room</string>
    <string name="text_select_room_s"> Select Room\'s</string>
</resources>